control-service: address review comments
Fix failing unit tests and address review comments.

Signed-off-by: Tsvetomir Palashki <tpalashki@vmware.com>